Bug 42379 - Toolbar item clipped
Summary: Toolbar item clipped
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
Master old -3.6
Hardware: All All
: medium normal
Assignee: Jan Holesovsky
URL:
Whiteboard: target:3.7.0 target:3.6.0.0.beta2 tar...
Keywords: easyHack
: 45726 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-10-29 11:32 UTC by Ivan Timofeev (retired)
Modified: 2015-12-22 01:41 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Clipped toolbar item (12.36 KB, image/png)
2011-10-29 11:32 UTC, Ivan Timofeev (retired)
Details
Stupid patch (1.05 KB, patch)
2011-10-29 11:42 UTC, Ivan Timofeev (retired)
Details
Screenshot demonstrating the hidden items bug. (23.93 KB, image/png)
2011-12-29 06:49 UTC, v_2e
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ivan Timofeev (retired) 2011-10-29 11:32:47 UTC
Created attachment 52897 [details]
Clipped toolbar item

LibO 3.5 has the new "more-toolbar-items" button - that's great, but... 

1. Open Writer (use default toolbar settings, make sure that the window is wide enough - all of the toolbar items should be visible).

2. Click "View -> Toolbars -> Drawing" and draw something. The "Formatting" toolbar should be replaced with the "Drawing Object Properties" one when the drawing object is active.

3. Click on the free place of the doc - a cursor will blink again and the "Drawing Object Properties" toolbar will give the "Formatting" toolbar a seat.

Problem: last item of the "Formatting" toolbar becomes invisible and the ">>" button appears although there is enough space. See the attached screenshot.

OS: Ubuntu 10.10. Can't test on other systems.

Assigned to Kendy according to git-log :-)
Comment 1 Ivan Timofeev (retired) 2011-10-29 11:42:08 UTC
Created attachment 52899 [details]
Stupid patch

Also I've tried to fix this - see attached patch... It's so stupid (that's all what I can do), but it works!
After reading it: 6 is the minimum number that helps.
Comment 2 Rainer Bielefeld Retired 2011-10-30 01:02:25 UTC
[Reproducible] with various Themes and icon sizes and parallel installation of MinGW Master "LibO-dev 3.5.0 – WIN7 Home Premium (64bit) English UI [(Build ID:  2ba5d12-e8c71c5-41e7bcd-4b83b90)] (daily/MinGW_cross-compilation2011-10-25_00.12.09)" 

Works fine with "LibreOffice 3.4.4RC1  - WIN7 Home Premium (64bit) German UI [OOO340m1 (Build:401)]"
Comment 3 v_2e 2011-12-29 06:49:46 UTC
Created attachment 54942 [details]
Screenshot demonstrating the hidden items bug.

  This bug is present in LibreOffice-3.5.0beta2

Steps to reproduce in my case:
1. Open Writer
2. Right-click on the toolbar and change the visibility of some buttons (turn on or off -- it doesn't matter).
3. See that the last item is not shown even though there is plenty of free space on the toolbar.
4. If I switch to another Desktop (I'm using Xfce currently) and back, everything becomes fine with this toolbar.

  Regards,
    Vladimir
Comment 4 Urmas 2012-02-14 02:47:29 UTC
*** Bug 45726 has been marked as a duplicate of this bug. ***
Comment 5 aphotographofme+bug 2012-02-16 07:41:10 UTC
Just want to add that I see the same behaviour on 3.5 final and would like to see it fixed.
Comment 6 Michael Meeks 2012-05-08 12:57:44 UTC
Kendy - patch for comment from you :-)
Comment 7 Not Assigned 2012-06-09 10:48:10 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0a9b398f3effecfea3b330fdc2f46b6f914cba81

fdo#42379: hide separators before calculating line breaks
Comment 8 Ivan Timofeev (retired) 2012-06-09 10:54:00 UTC
I managed to find a proper fix after all. :)
Comment 9 Not Assigned 2012-06-09 10:54:04 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=243fefb72897f45448d946d571397b7bc4893e7d&g=libreoffice-3-6

fdo#42379: hide separators before calculating line breaks


It will be available in LibreOffice 3.6.
Comment 10 Not Assigned 2012-06-11 08:10:55 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b29d04e9360920045cfa87f1e6263434915ae9a7&g=libreoffice-3-5

fdo#42379: hide separators before calculating line breaks


It will be available in LibreOffice 3.5.5.
Comment 11 Rainer Bielefeld Retired 2012-08-03 09:12:30 UTC
We need exact and correct target information for automated lists in Wiki and LibO Web Site.
Comment 12 Robinson Tryon (qubit) 2015-12-22 01:41:42 UTC
Migrating Whiteboard tags to Keywords: (EasyHack)
[NinjaEdit]