fdo#42379: hide separators before calculating line breaks

it is nesessary since commit 1703501a100cd6d52578baeb4e8097218b285ffb,
ImplCalcBreaks looks for the last visible item.

Change-Id: Ifb103d264116930339d8f5cfb267601f0e760fd2